// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/NewChannelModal should match snapshot, display only private channel option 1`] = `
<span>
  <Modal
    animation={true}
    aria-labelledby="newChannelModalLabel"
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    bsSize="large"
    dialogClassName="a11y__modal new-channel__modal new-channel"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[MockFunction]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    role="dialog"
    show={true}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={false}
      closeLabel="Close"
    >
      <button
        aria-label="Close"
        className="close"
        onClick={[MockFunction]}
        title="Close"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
      <ModalTitle
        bsClass="modal-title"
        componentClass="h1"
        id="newChannelModalLabel"
      >
        <FormattedMessage
          defaultMessage="New Channel"
          id="channel_modal.modalTitle"
        />
      </ModalTitle>
    </ModalHeader>
    <form
      className="form-horizontal"
      role="form"
    >
      <ModalBody
        bsClass="modal-body"
        componentClass="div"
      >
        <div
          className="form-group"
        >
          <label
            className="col-sm-3 form__label control-label"
            id="channelModalTypeLabel"
          >
            <FormattedMessage
              defaultMessage="Type"
              id="channel_modal.type"
            />
          </label>
          <div
            className="col-sm-9"
          >
            <div
              className="type-container multi-select__radio"
            >
              <div
                className="radio"
              >
                <div
                  className="flex-parent"
                >
                  <LockIcon
                    className="icon icon__lock icon--body type-icon"
                  />
                  <FormattedMessage
                    defaultMessage="Private"
                    id="channel_modal.privateName"
                  />
                  <FormattedMessage
                    defaultMessage=" - Only invited members can join this channel"
                    id="channel_modal.privateHint"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="col-sm-3 form__label control-label"
            htmlFor="newChannelName"
          >
            <FormattedMessage
              defaultMessage="Name"
              id="channel_modal.name"
            />
          </label>
          <div
            className="col-sm-9"
          >
            <LocalizedInput
              autoFocus={true}
              className="form-control"
              id="newChannelName"
              maxLength={64}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder={
                Object {
                  "defaultMessage": "E.g.: \\"Bugs\\", \\"Marketing\\", \\"客户支持\\"",
                  "id": "channel_modal.nameEx",
                }
              }
              type="text"
              value="testchannel"
            />
            <p
              className="input__help dark"
            >
              URL: /testchannel (
              <button
                className="color--link style--none"
                onClick={[Function]}
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="channel_modal.edit"
                />
              </button>
              )
            </p>
          </div>
        </div>
        <div
          className="form-group"
        >
          <div
            className="col-sm-3"
          >
            <label
              className="form__label control-label"
              htmlFor="newChannelPurpose"
            >
              <FormattedMessage
                defaultMessage="Purpose"
                id="channel_modal.purpose"
              />
            </label>
            <label
              className="form__label light"
            >
              <FormattedMessage
                defaultMessage="(optional)"
                id="channel_modal.optional"
              />
            </label>
          </div>
          <div
            className="col-sm-9"
          >
            <textarea
              className="form-control no-resize"
              id="newChannelPurpose"
              maxLength="250"
              onChange={[Function]}
              placeholder="E.g.: \\"A channel to file bugs and improvements\\""
              rows="4"
              value=""
            />
            <p
              className="input__help"
            >
              <FormattedMessage
                defaultMessage="Describe how this channel should be used."
                id="channel_modal.descriptionHelp"
              />
            </p>
          </div>
        </div>
        <div
          className="form-group less"
        >
          <div
            className="col-sm-3"
          >
            <label
              className="form__label control-label"
              htmlFor="newChannelHeader"
            >
              <FormattedMessage
                defaultMessage="Header"
                id="channel_modal.header"
              />
            </label>
            <label
              className="form__label light"
            >
              <FormattedMessage
                defaultMessage="(optional)"
                id="channel_modal.optional"
              />
            </label>
          </div>
          <div
            className="col-sm-9"
          >
            <textarea
              className="form-control no-resize"
              id="newChannelHeader"
              maxLength="1024"
              onChange={[Function]}
              placeholder="E.g.: \\"[Link Title](http://example.com)\\""
              rows="4"
              value=""
            />
            <p
              className="input__help"
            >
              <FormattedMessage
                defaultMessage="Set text that will appear in the header of the channel beside the channel name. For example, include frequently used links by typing [Link Title](http://example.com)."
                id="channel_modal.headerHelp"
              />
            </p>
          </div>
        </div>
      </ModalBody>
      <ModalFooter
        bsClass="modal-footer"
        componentClass="div"
      >
        <button
          className="btn btn-link"
          id="cancelNewChannel"
          onBlur={[Function]}
          onClick={[MockFunction]}
          type="button"
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="channel_modal.cancel"
          />
        </button>
        <button
          className="btn btn-primary"
          id="submitNewChannel"
          onClick={[Function]}
          type="submit"
        >
          <FormattedMessage
            defaultMessage="Create Channel"
            id="channel_modal.createNew"
          />
        </button>
      </ModalFooter>
    </form>
  </Modal>
</span>
`;

exports[`components/NewChannelModal should match snapshot, display only public channel option 1`] = `
<span>
  <Modal
    animation={true}
    aria-labelledby="newChannelModalLabel"
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    bsSize="large"
    dialogClassName="a11y__modal new-channel__modal new-channel"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[MockFunction]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    role="dialog"
    show={true}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={false}
      closeLabel="Close"
    >
      <button
        aria-label="Close"
        className="close"
        onClick={[MockFunction]}
        title="Close"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
      <ModalTitle
        bsClass="modal-title"
        componentClass="h1"
        id="newChannelModalLabel"
      >
        <FormattedMessage
          defaultMessage="New Channel"
          id="channel_modal.modalTitle"
        />
      </ModalTitle>
    </ModalHeader>
    <form
      className="form-horizontal"
      role="form"
    >
      <ModalBody
        bsClass="modal-body"
        componentClass="div"
      >
        <div
          className="form-group"
        >
          <label
            className="col-sm-3 form__label control-label"
            id="channelModalTypeLabel"
          >
            <FormattedMessage
              defaultMessage="Type"
              id="channel_modal.type"
            />
          </label>
          <div
            className="col-sm-9"
          >
            <div
              className="type-container multi-select__radio"
            >
              <div
                className="radio"
              >
                <div
                  className="flex-parent"
                >
                  <GlobeIcon
                    className="icon icon__globe icon--body type-icon"
                  />
                  <FormattedMessage
                    defaultMessage="Public"
                    id="channel_modal.publicName"
                  />
                  <FormattedMessage
                    defaultMessage=" - Anyone can join this channel"
                    id="channel_modal.publicHint"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="col-sm-3 form__label control-label"
            htmlFor="newChannelName"
          >
            <FormattedMessage
              defaultMessage="Name"
              id="channel_modal.name"
            />
          </label>
          <div
            className="col-sm-9"
          >
            <LocalizedInput
              autoFocus={true}
              className="form-control"
              id="newChannelName"
              maxLength={64}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder={
                Object {
                  "defaultMessage": "E.g.: \\"Bugs\\", \\"Marketing\\", \\"客户支持\\"",
                  "id": "channel_modal.nameEx",
                }
              }
              type="text"
              value="testchannel"
            />
            <p
              className="input__help dark"
            >
              URL: /testchannel (
              <button
                className="color--link style--none"
                onClick={[Function]}
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="channel_modal.edit"
                />
              </button>
              )
            </p>
          </div>
        </div>
        <div
          className="form-group"
        >
          <div
            className="col-sm-3"
          >
            <label
              className="form__label control-label"
              htmlFor="newChannelPurpose"
            >
              <FormattedMessage
                defaultMessage="Purpose"
                id="channel_modal.purpose"
              />
            </label>
            <label
              className="form__label light"
            >
              <FormattedMessage
                defaultMessage="(optional)"
                id="channel_modal.optional"
              />
            </label>
          </div>
          <div
            className="col-sm-9"
          >
            <textarea
              className="form-control no-resize"
              id="newChannelPurpose"
              maxLength="250"
              onChange={[Function]}
              placeholder="E.g.: \\"A channel to file bugs and improvements\\""
              rows="4"
              value=""
            />
            <p
              className="input__help"
            >
              <FormattedMessage
                defaultMessage="Describe how this channel should be used."
                id="channel_modal.descriptionHelp"
              />
            </p>
          </div>
        </div>
        <div
          className="form-group less"
        >
          <div
            className="col-sm-3"
          >
            <label
              className="form__label control-label"
              htmlFor="newChannelHeader"
            >
              <FormattedMessage
                defaultMessage="Header"
                id="channel_modal.header"
              />
            </label>
            <label
              className="form__label light"
            >
              <FormattedMessage
                defaultMessage="(optional)"
                id="channel_modal.optional"
              />
            </label>
          </div>
          <div
            className="col-sm-9"
          >
            <textarea
              className="form-control no-resize"
              id="newChannelHeader"
              maxLength="1024"
              onChange={[Function]}
              placeholder="E.g.: \\"[Link Title](http://example.com)\\""
              rows="4"
              value=""
            />
            <p
              className="input__help"
            >
              <FormattedMessage
                defaultMessage="Set text that will appear in the header of the channel beside the channel name. For example, include frequently used links by typing [Link Title](http://example.com)."
                id="channel_modal.headerHelp"
              />
            </p>
          </div>
        </div>
      </ModalBody>
      <ModalFooter
        bsClass="modal-footer"
        componentClass="div"
      >
        <button
          className="btn btn-link"
          id="cancelNewChannel"
          onBlur={[Function]}
          onClick={[MockFunction]}
          type="button"
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="channel_modal.cancel"
          />
        </button>
        <button
          className="btn btn-primary"
          id="submitNewChannel"
          onClick={[Function]}
          type="submit"
        >
          <FormattedMessage
            defaultMessage="Create Channel"
            id="channel_modal.createNew"
          />
        </button>
      </ModalFooter>
    </form>
  </Modal>
</span>
`;

exports[`components/NewChannelModal should match snapshot, modal not showing 1`] = `
<span>
  <Modal
    animation={true}
    aria-labelledby="newChannelModalLabel"
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    bsSize="large"
    dialogClassName="a11y__modal new-channel__modal new-channel"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[MockFunction]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    role="dialog"
    show={false}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={false}
      closeLabel="Close"
    >
      <button
        aria-label="Close"
        className="close"
        onClick={[MockFunction]}
        title="Close"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
      <ModalTitle
        bsClass="modal-title"
        componentClass="h1"
        id="newChannelModalLabel"
      >
        <FormattedMessage
          defaultMessage="New Channel"
          id="channel_modal.modalTitle"
        />
      </ModalTitle>
    </ModalHeader>
    <form
      className="form-horizontal"
      role="form"
    >
      <ModalBody
        bsClass="modal-body"
        componentClass="div"
      >
        <div
          className="form-group"
        >
          <label
            className="col-sm-3 form__label control-label"
            id="channelModalTypeLabel"
          >
            <FormattedMessage
              defaultMessage="Type"
              id="channel_modal.type"
            />
          </label>
          <div
            className="col-sm-9"
          >
            <fieldset
              className="multi-select__radio"
              key="channelType"
            >
              <div
                className="radio"
              >
                <label>
                  <input
                    aria-labelledby="channelModalTypeLabel"
                    checked={true}
                    id="public"
                    name="channelType"
                    onChange={[Function]}
                    type="radio"
                  />
                  <div
                    className="flex-parent"
                  >
                    <GlobeIcon
                      className="icon icon__globe icon--body type-icon"
                    />
                    <FormattedMessage
                      defaultMessage="Public"
                      id="channel_modal.publicName"
                    />
                    <FormattedMessage
                      defaultMessage=" - Anyone can join this channel"
                      id="channel_modal.publicHint"
                    />
                  </div>
                </label>
              </div>
              <div
                className="radio"
              >
                <label>
                  <input
                    aria-labelledby="channelModalTypeLabel"
                    checked={false}
                    id="private"
                    name="channelType"
                    onChange={[Function]}
                    type="radio"
                  />
                  <div
                    className="flex-parent"
                  >
                    <LockIcon
                      className="icon icon__lock icon--body type-icon"
                    />
                    <FormattedMessage
                      defaultMessage="Private"
                      id="channel_modal.privateName"
                    />
                    <FormattedMessage
                      defaultMessage=" - Only invited members can join this channel"
                      id="channel_modal.privateHint"
                    />
                  </div>
                </label>
              </div>
            </fieldset>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="col-sm-3 form__label control-label"
            htmlFor="newChannelName"
          >
            <FormattedMessage
              defaultMessage="Name"
              id="channel_modal.name"
            />
          </label>
          <div
            className="col-sm-9"
          >
            <LocalizedInput
              autoFocus={true}
              className="form-control"
              id="newChannelName"
              maxLength={64}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder={
                Object {
                  "defaultMessage": "E.g.: \\"Bugs\\", \\"Marketing\\", \\"客户支持\\"",
                  "id": "channel_modal.nameEx",
                }
              }
              type="text"
              value="testchannel"
            />
            <p
              className="input__help dark"
            >
              URL: /testchannel (
              <button
                className="color--link style--none"
                onClick={[Function]}
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="channel_modal.edit"
                />
              </button>
              )
            </p>
          </div>
        </div>
        <div
          className="form-group"
        >
          <div
            className="col-sm-3"
          >
            <label
              className="form__label control-label"
              htmlFor="newChannelPurpose"
            >
              <FormattedMessage
                defaultMessage="Purpose"
                id="channel_modal.purpose"
              />
            </label>
            <label
              className="form__label light"
            >
              <FormattedMessage
                defaultMessage="(optional)"
                id="channel_modal.optional"
              />
            </label>
          </div>
          <div
            className="col-sm-9"
          >
            <textarea
              className="form-control no-resize"
              id="newChannelPurpose"
              maxLength="250"
              onChange={[Function]}
              placeholder="E.g.: \\"A channel to file bugs and improvements\\""
              rows="4"
              value=""
            />
            <p
              className="input__help"
            >
              <FormattedMessage
                defaultMessage="Describe how this channel should be used."
                id="channel_modal.descriptionHelp"
              />
            </p>
          </div>
        </div>
        <div
          className="form-group less"
        >
          <div
            className="col-sm-3"
          >
            <label
              className="form__label control-label"
              htmlFor="newChannelHeader"
            >
              <FormattedMessage
                defaultMessage="Header"
                id="channel_modal.header"
              />
            </label>
            <label
              className="form__label light"
            >
              <FormattedMessage
                defaultMessage="(optional)"
                id="channel_modal.optional"
              />
            </label>
          </div>
          <div
            className="col-sm-9"
          >
            <textarea
              className="form-control no-resize"
              id="newChannelHeader"
              maxLength="1024"
              onChange={[Function]}
              placeholder="E.g.: \\"[Link Title](http://example.com)\\""
              rows="4"
              value=""
            />
            <p
              className="input__help"
            >
              <FormattedMessage
                defaultMessage="Set text that will appear in the header of the channel beside the channel name. For example, include frequently used links by typing [Link Title](http://example.com)."
                id="channel_modal.headerHelp"
              />
            </p>
          </div>
        </div>
      </ModalBody>
      <ModalFooter
        bsClass="modal-footer"
        componentClass="div"
      >
        <button
          className="btn btn-link"
          id="cancelNewChannel"
          onBlur={[Function]}
          onClick={[MockFunction]}
          type="button"
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="channel_modal.cancel"
          />
        </button>
        <button
          className="btn btn-primary"
          id="submitNewChannel"
          onClick={[Function]}
          type="submit"
        >
          <FormattedMessage
            defaultMessage="Create Channel"
            id="channel_modal.createNew"
          />
        </button>
      </ModalFooter>
    </form>
  </Modal>
</span>
`;

exports[`components/NewChannelModal should match snapshot, modal showing 1`] = `
<span>
  <Modal
    animation={true}
    aria-labelledby="newChannelModalLabel"
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    bsSize="large"
    dialogClassName="a11y__modal new-channel__modal new-channel"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[MockFunction]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    role="dialog"
    show={true}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={false}
      closeLabel="Close"
    >
      <button
        aria-label="Close"
        className="close"
        onClick={[MockFunction]}
        title="Close"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
      <ModalTitle
        bsClass="modal-title"
        componentClass="h1"
        id="newChannelModalLabel"
      >
        <FormattedMessage
          defaultMessage="New Channel"
          id="channel_modal.modalTitle"
        />
      </ModalTitle>
    </ModalHeader>
    <form
      className="form-horizontal"
      role="form"
    >
      <ModalBody
        bsClass="modal-body"
        componentClass="div"
      >
        <div
          className="form-group"
        >
          <label
            className="col-sm-3 form__label control-label"
            id="channelModalTypeLabel"
          >
            <FormattedMessage
              defaultMessage="Type"
              id="channel_modal.type"
            />
          </label>
          <div
            className="col-sm-9"
          >
            <fieldset
              className="multi-select__radio"
              key="channelType"
            >
              <div
                className="radio"
              >
                <label>
                  <input
                    aria-labelledby="channelModalTypeLabel"
                    checked={true}
                    id="public"
                    name="channelType"
                    onChange={[Function]}
                    type="radio"
                  />
                  <div
                    className="flex-parent"
                  >
                    <GlobeIcon
                      className="icon icon__globe icon--body type-icon"
                    />
                    <FormattedMessage
                      defaultMessage="Public"
                      id="channel_modal.publicName"
                    />
                    <FormattedMessage
                      defaultMessage=" - Anyone can join this channel"
                      id="channel_modal.publicHint"
                    />
                  </div>
                </label>
              </div>
              <div
                className="radio"
              >
                <label>
                  <input
                    aria-labelledby="channelModalTypeLabel"
                    checked={false}
                    id="private"
                    name="channelType"
                    onChange={[Function]}
                    type="radio"
                  />
                  <div
                    className="flex-parent"
                  >
                    <LockIcon
                      className="icon icon__lock icon--body type-icon"
                    />
                    <FormattedMessage
                      defaultMessage="Private"
                      id="channel_modal.privateName"
                    />
                    <FormattedMessage
                      defaultMessage=" - Only invited members can join this channel"
                      id="channel_modal.privateHint"
                    />
                  </div>
                </label>
              </div>
            </fieldset>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="col-sm-3 form__label control-label"
            htmlFor="newChannelName"
          >
            <FormattedMessage
              defaultMessage="Name"
              id="channel_modal.name"
            />
          </label>
          <div
            className="col-sm-9"
          >
            <LocalizedInput
              autoFocus={true}
              className="form-control"
              id="newChannelName"
              maxLength={64}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder={
                Object {
                  "defaultMessage": "E.g.: \\"Bugs\\", \\"Marketing\\", \\"客户支持\\"",
                  "id": "channel_modal.nameEx",
                }
              }
              type="text"
              value="testchannel"
            />
            <p
              className="input__help dark"
            >
              URL: /testchannel (
              <button
                className="color--link style--none"
                onClick={[Function]}
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="channel_modal.edit"
                />
              </button>
              )
            </p>
          </div>
        </div>
        <div
          className="form-group"
        >
          <div
            className="col-sm-3"
          >
            <label
              className="form__label control-label"
              htmlFor="newChannelPurpose"
            >
              <FormattedMessage
                defaultMessage="Purpose"
                id="channel_modal.purpose"
              />
            </label>
            <label
              className="form__label light"
            >
              <FormattedMessage
                defaultMessage="(optional)"
                id="channel_modal.optional"
              />
            </label>
          </div>
          <div
            className="col-sm-9"
          >
            <textarea
              className="form-control no-resize"
              id="newChannelPurpose"
              maxLength="250"
              onChange={[Function]}
              placeholder="E.g.: \\"A channel to file bugs and improvements\\""
              rows="4"
              value=""
            />
            <p
              className="input__help"
            >
              <FormattedMessage
                defaultMessage="Describe how this channel should be used."
                id="channel_modal.descriptionHelp"
              />
            </p>
          </div>
        </div>
        <div
          className="form-group less"
        >
          <div
            className="col-sm-3"
          >
            <label
              className="form__label control-label"
              htmlFor="newChannelHeader"
            >
              <FormattedMessage
                defaultMessage="Header"
                id="channel_modal.header"
              />
            </label>
            <label
              className="form__label light"
            >
              <FormattedMessage
                defaultMessage="(optional)"
                id="channel_modal.optional"
              />
            </label>
          </div>
          <div
            className="col-sm-9"
          >
            <textarea
              className="form-control no-resize"
              id="newChannelHeader"
              maxLength="1024"
              onChange={[Function]}
              placeholder="E.g.: \\"[Link Title](http://example.com)\\""
              rows="4"
              value=""
            />
            <p
              className="input__help"
            >
              <FormattedMessage
                defaultMessage="Set text that will appear in the header of the channel beside the channel name. For example, include frequently used links by typing [Link Title](http://example.com)."
                id="channel_modal.headerHelp"
              />
            </p>
          </div>
        </div>
      </ModalBody>
      <ModalFooter
        bsClass="modal-footer"
        componentClass="div"
      >
        <button
          className="btn btn-link"
          id="cancelNewChannel"
          onBlur={[Function]}
          onClick={[MockFunction]}
          type="button"
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="channel_modal.cancel"
          />
        </button>
        <button
          className="btn btn-primary"
          id="submitNewChannel"
          onClick={[Function]}
          type="submit"
        >
          <FormattedMessage
            defaultMessage="Create Channel"
            id="channel_modal.createNew"
          />
        </button>
      </ModalFooter>
    </form>
  </Modal>
</span>
`;

exports[`components/NewChannelModal should match snapshot, on displayNameError 1`] = `
<span>
  <Modal
    animation={true}
    aria-labelledby="newChannelModalLabel"
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    bsSize="large"
    dialogClassName="a11y__modal new-channel__modal new-channel"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[MockFunction]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    role="dialog"
    show={true}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={false}
      closeLabel="Close"
    >
      <button
        aria-label="Close"
        className="close"
        onClick={[MockFunction]}
        title="Close"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
      <ModalTitle
        bsClass="modal-title"
        componentClass="h1"
        id="newChannelModalLabel"
      >
        <FormattedMessage
          defaultMessage="New Channel"
          id="channel_modal.modalTitle"
        />
      </ModalTitle>
    </ModalHeader>
    <form
      className="form-horizontal"
      role="form"
    >
      <ModalBody
        bsClass="modal-body"
        componentClass="div"
      >
        <div
          className="form-group"
        >
          <label
            className="col-sm-3 form__label control-label"
            id="channelModalTypeLabel"
          >
            <FormattedMessage
              defaultMessage="Type"
              id="channel_modal.type"
            />
          </label>
          <div
            className="col-sm-9"
          >
            <fieldset
              className="multi-select__radio"
              key="channelType"
            >
              <div
                className="radio"
              >
                <label>
                  <input
                    aria-labelledby="channelModalTypeLabel"
                    checked={true}
                    id="public"
                    name="channelType"
                    onChange={[Function]}
                    type="radio"
                  />
                  <div
                    className="flex-parent"
                  >
                    <GlobeIcon
                      className="icon icon__globe icon--body type-icon"
                    />
                    <FormattedMessage
                      defaultMessage="Public"
                      id="channel_modal.publicName"
                    />
                    <FormattedMessage
                      defaultMessage=" - Anyone can join this channel"
                      id="channel_modal.publicHint"
                    />
                  </div>
                </label>
              </div>
              <div
                className="radio"
              >
                <label>
                  <input
                    aria-labelledby="channelModalTypeLabel"
                    checked={false}
                    id="private"
                    name="channelType"
                    onChange={[Function]}
                    type="radio"
                  />
                  <div
                    className="flex-parent"
                  >
                    <LockIcon
                      className="icon icon__lock icon--body type-icon"
                    />
                    <FormattedMessage
                      defaultMessage="Private"
                      id="channel_modal.privateName"
                    />
                    <FormattedMessage
                      defaultMessage=" - Only invited members can join this channel"
                      id="channel_modal.privateHint"
                    />
                  </div>
                </label>
              </div>
            </fieldset>
          </div>
        </div>
        <div
          className="form-group has-error"
        >
          <label
            className="col-sm-3 form__label control-label"
            htmlFor="newChannelName"
          >
            <FormattedMessage
              defaultMessage="Name"
              id="channel_modal.name"
            />
          </label>
          <div
            className="col-sm-9"
          >
            <LocalizedInput
              autoFocus={true}
              className="form-control"
              id="newChannelName"
              maxLength={64}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder={
                Object {
                  "defaultMessage": "E.g.: \\"Bugs\\", \\"Marketing\\", \\"客户支持\\"",
                  "id": "channel_modal.nameEx",
                }
              }
              type="text"
              value="testchannel"
            />
            <p
              className="input__help error"
            >
              <FormattedMessage
                defaultMessage="Display name must have at least 2 characters."
                id="channel_modal.displayNameError"
              />
              <Component />
            </p>
            <p
              className="input__help dark"
            >
              URL: /testchannel (
              <button
                className="color--link style--none"
                onClick={[Function]}
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="channel_modal.edit"
                />
              </button>
              )
            </p>
          </div>
        </div>
        <div
          className="form-group"
        >
          <div
            className="col-sm-3"
          >
            <label
              className="form__label control-label"
              htmlFor="newChannelPurpose"
            >
              <FormattedMessage
                defaultMessage="Purpose"
                id="channel_modal.purpose"
              />
            </label>
            <label
              className="form__label light"
            >
              <FormattedMessage
                defaultMessage="(optional)"
                id="channel_modal.optional"
              />
            </label>
          </div>
          <div
            className="col-sm-9"
          >
            <textarea
              className="form-control no-resize"
              id="newChannelPurpose"
              maxLength="250"
              onChange={[Function]}
              placeholder="E.g.: \\"A channel to file bugs and improvements\\""
              rows="4"
              value=""
            />
            <p
              className="input__help"
            >
              <FormattedMessage
                defaultMessage="Describe how this channel should be used."
                id="channel_modal.descriptionHelp"
              />
            </p>
          </div>
        </div>
        <div
          className="form-group less"
        >
          <div
            className="col-sm-3"
          >
            <label
              className="form__label control-label"
              htmlFor="newChannelHeader"
            >
              <FormattedMessage
                defaultMessage="Header"
                id="channel_modal.header"
              />
            </label>
            <label
              className="form__label light"
            >
              <FormattedMessage
                defaultMessage="(optional)"
                id="channel_modal.optional"
              />
            </label>
          </div>
          <div
            className="col-sm-9"
          >
            <textarea
              className="form-control no-resize"
              id="newChannelHeader"
              maxLength="1024"
              onChange={[Function]}
              placeholder="E.g.: \\"[Link Title](http://example.com)\\""
              rows="4"
              value=""
            />
            <p
              className="input__help"
            >
              <FormattedMessage
                defaultMessage="Set text that will appear in the header of the channel beside the channel name. For example, include frequently used links by typing [Link Title](http://example.com)."
                id="channel_modal.headerHelp"
              />
            </p>
          </div>
        </div>
      </ModalBody>
      <ModalFooter
        bsClass="modal-footer"
        componentClass="div"
      >
        <button
          className="btn btn-link"
          id="cancelNewChannel"
          onBlur={[Function]}
          onClick={[MockFunction]}
          type="button"
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="channel_modal.cancel"
          />
        </button>
        <button
          className="btn btn-primary"
          id="submitNewChannel"
          onClick={[Function]}
          type="submit"
        >
          <FormattedMessage
            defaultMessage="Create Channel"
            id="channel_modal.createNew"
          />
        </button>
      </ModalFooter>
    </form>
  </Modal>
</span>
`;

exports[`components/NewChannelModal should match snapshot, on serverError 1`] = `
<span>
  <Modal
    animation={true}
    aria-labelledby="newChannelModalLabel"
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    bsSize="large"
    dialogClassName="a11y__modal new-channel__modal new-channel"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[MockFunction]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    role="dialog"
    show={true}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={false}
      closeLabel="Close"
    >
      <button
        aria-label="Close"
        className="close"
        onClick={[MockFunction]}
        title="Close"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
      <ModalTitle
        bsClass="modal-title"
        componentClass="h1"
        id="newChannelModalLabel"
      >
        <FormattedMessage
          defaultMessage="New Channel"
          id="channel_modal.modalTitle"
        />
      </ModalTitle>
    </ModalHeader>
    <form
      className="form-horizontal"
      role="form"
    >
      <ModalBody
        bsClass="modal-body"
        componentClass="div"
      >
        <div
          className="form-group"
        >
          <label
            className="col-sm-3 form__label control-label"
            id="channelModalTypeLabel"
          >
            <FormattedMessage
              defaultMessage="Type"
              id="channel_modal.type"
            />
          </label>
          <div
            className="col-sm-9"
          >
            <fieldset
              className="multi-select__radio"
              key="channelType"
            >
              <div
                className="radio"
              >
                <label>
                  <input
                    aria-labelledby="channelModalTypeLabel"
                    checked={true}
                    id="public"
                    name="channelType"
                    onChange={[Function]}
                    type="radio"
                  />
                  <div
                    className="flex-parent"
                  >
                    <GlobeIcon
                      className="icon icon__globe icon--body type-icon"
                    />
                    <FormattedMessage
                      defaultMessage="Public"
                      id="channel_modal.publicName"
                    />
                    <FormattedMessage
                      defaultMessage=" - Anyone can join this channel"
                      id="channel_modal.publicHint"
                    />
                  </div>
                </label>
              </div>
              <div
                className="radio"
              >
                <label>
                  <input
                    aria-labelledby="channelModalTypeLabel"
                    checked={false}
                    id="private"
                    name="channelType"
                    onChange={[Function]}
                    type="radio"
                  />
                  <div
                    className="flex-parent"
                  >
                    <LockIcon
                      className="icon icon__lock icon--body type-icon"
                    />
                    <FormattedMessage
                      defaultMessage="Private"
                      id="channel_modal.privateName"
                    />
                    <FormattedMessage
                      defaultMessage=" - Only invited members can join this channel"
                      id="channel_modal.privateHint"
                    />
                  </div>
                </label>
              </div>
            </fieldset>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="col-sm-3 form__label control-label"
            htmlFor="newChannelName"
          >
            <FormattedMessage
              defaultMessage="Name"
              id="channel_modal.name"
            />
          </label>
          <div
            className="col-sm-9"
          >
            <LocalizedInput
              autoFocus={true}
              className="form-control"
              id="newChannelName"
              maxLength={64}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder={
                Object {
                  "defaultMessage": "E.g.: \\"Bugs\\", \\"Marketing\\", \\"客户支持\\"",
                  "id": "channel_modal.nameEx",
                }
              }
              type="text"
              value="testchannel"
            />
            <p
              className="input__help dark"
            >
              URL: /testchannel (
              <button
                className="color--link style--none"
                onClick={[Function]}
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="channel_modal.edit"
                />
              </button>
              )
            </p>
          </div>
        </div>
        <div
          className="form-group"
        >
          <div
            className="col-sm-3"
          >
            <label
              className="form__label control-label"
              htmlFor="newChannelPurpose"
            >
              <FormattedMessage
                defaultMessage="Purpose"
                id="channel_modal.purpose"
              />
            </label>
            <label
              className="form__label light"
            >
              <FormattedMessage
                defaultMessage="(optional)"
                id="channel_modal.optional"
              />
            </label>
          </div>
          <div
            className="col-sm-9"
          >
            <textarea
              className="form-control no-resize"
              id="newChannelPurpose"
              maxLength="250"
              onChange={[Function]}
              placeholder="E.g.: \\"A channel to file bugs and improvements\\""
              rows="4"
              value=""
            />
            <p
              className="input__help"
            >
              <FormattedMessage
                defaultMessage="Describe how this channel should be used."
                id="channel_modal.descriptionHelp"
              />
            </p>
          </div>
        </div>
        <div
          className="form-group less"
        >
          <div
            className="col-sm-3"
          >
            <label
              className="form__label control-label"
              htmlFor="newChannelHeader"
            >
              <FormattedMessage
                defaultMessage="Header"
                id="channel_modal.header"
              />
            </label>
            <label
              className="form__label light"
            >
              <FormattedMessage
                defaultMessage="(optional)"
                id="channel_modal.optional"
              />
            </label>
          </div>
          <div
            className="col-sm-9"
          >
            <textarea
              className="form-control no-resize"
              id="newChannelHeader"
              maxLength="1024"
              onChange={[Function]}
              placeholder="E.g.: \\"[Link Title](http://example.com)\\""
              rows="4"
              value=""
            />
            <p
              className="input__help"
            >
              <FormattedMessage
                defaultMessage="Set text that will appear in the header of the channel beside the channel name. For example, include frequently used links by typing [Link Title](http://example.com)."
                id="channel_modal.headerHelp"
              />
            </p>
            <div
              className="form-group has-error"
            >
              <div
                className="col-sm-12"
              >
                <p
                  className="input__help error"
                  id="createChannelError"
                >
                  server error
                </p>
              </div>
            </div>
          </div>
        </div>
      </ModalBody>
      <ModalFooter
        bsClass="modal-footer"
        componentClass="div"
      >
        <button
          className="btn btn-link"
          id="cancelNewChannel"
          onBlur={[Function]}
          onClick={[MockFunction]}
          type="button"
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="channel_modal.cancel"
          />
        </button>
        <button
          className="btn btn-primary"
          id="submitNewChannel"
          onClick={[Function]}
          type="submit"
        >
          <FormattedMessage
            defaultMessage="Create Channel"
            id="channel_modal.createNew"
          />
        </button>
      </ModalFooter>
    </form>
  </Modal>
</span>
`;

exports[`components/NewChannelModal should match snapshot, private channel filled in header and purpose 1`] = `
<span>
  <Modal
    animation={true}
    aria-labelledby="newChannelModalLabel"
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    bsSize="large"
    dialogClassName="a11y__modal new-channel__modal new-channel"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[MockFunction]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    role="dialog"
    show={true}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={false}
      closeLabel="Close"
    >
      <button
        aria-label="Close"
        className="close"
        onClick={[MockFunction]}
        title="Close"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
      <ModalTitle
        bsClass="modal-title"
        componentClass="h1"
        id="newChannelModalLabel"
      >
        <FormattedMessage
          defaultMessage="New Channel"
          id="channel_modal.modalTitle"
        />
      </ModalTitle>
    </ModalHeader>
    <form
      className="form-horizontal"
      role="form"
    >
      <ModalBody
        bsClass="modal-body"
        componentClass="div"
      >
        <div
          className="form-group"
        >
          <label
            className="col-sm-3 form__label control-label"
            id="channelModalTypeLabel"
          >
            <FormattedMessage
              defaultMessage="Type"
              id="channel_modal.type"
            />
          </label>
          <div
            className="col-sm-9"
          >
            <fieldset
              className="multi-select__radio"
              key="channelType"
            >
              <div
                className="radio"
              >
                <label>
                  <input
                    aria-labelledby="channelModalTypeLabel"
                    checked={false}
                    id="public"
                    name="channelType"
                    onChange={[Function]}
                    type="radio"
                  />
                  <div
                    className="flex-parent"
                  >
                    <GlobeIcon
                      className="icon icon__globe icon--body type-icon"
                    />
                    <FormattedMessage
                      defaultMessage="Public"
                      id="channel_modal.publicName"
                    />
                    <FormattedMessage
                      defaultMessage=" - Anyone can join this channel"
                      id="channel_modal.publicHint"
                    />
                  </div>
                </label>
              </div>
              <div
                className="radio"
              >
                <label>
                  <input
                    aria-labelledby="channelModalTypeLabel"
                    checked={true}
                    id="private"
                    name="channelType"
                    onChange={[Function]}
                    type="radio"
                  />
                  <div
                    className="flex-parent"
                  >
                    <LockIcon
                      className="icon icon__lock icon--body type-icon"
                    />
                    <FormattedMessage
                      defaultMessage="Private"
                      id="channel_modal.privateName"
                    />
                    <FormattedMessage
                      defaultMessage=" - Only invited members can join this channel"
                      id="channel_modal.privateHint"
                    />
                  </div>
                </label>
              </div>
            </fieldset>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="col-sm-3 form__label control-label"
            htmlFor="newChannelName"
          >
            <FormattedMessage
              defaultMessage="Name"
              id="channel_modal.name"
            />
          </label>
          <div
            className="col-sm-9"
          >
            <LocalizedInput
              autoFocus={true}
              className="form-control"
              id="newChannelName"
              maxLength={64}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder={
                Object {
                  "defaultMessage": "E.g.: \\"Bugs\\", \\"Marketing\\", \\"客户支持\\"",
                  "id": "channel_modal.nameEx",
                }
              }
              type="text"
              value="testchannel"
            />
            <p
              className="input__help dark"
            >
              URL: /testchannel (
              <button
                className="color--link style--none"
                onClick={[Function]}
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="channel_modal.edit"
                />
              </button>
              )
            </p>
          </div>
        </div>
        <div
          className="form-group"
        >
          <div
            className="col-sm-3"
          >
            <label
              className="form__label control-label"
              htmlFor="newChannelPurpose"
            >
              <FormattedMessage
                defaultMessage="Purpose"
                id="channel_modal.purpose"
              />
            </label>
            <label
              className="form__label light"
            >
              <FormattedMessage
                defaultMessage="(optional)"
                id="channel_modal.optional"
              />
            </label>
          </div>
          <div
            className="col-sm-9"
          >
            <textarea
              className="form-control no-resize"
              id="newChannelPurpose"
              maxLength="250"
              onChange={[Function]}
              placeholder="E.g.: \\"A channel to file bugs and improvements\\""
              rows="4"
              value="some purpose"
            />
            <p
              className="input__help"
            >
              <FormattedMessage
                defaultMessage="Describe how this channel should be used."
                id="channel_modal.descriptionHelp"
              />
            </p>
          </div>
        </div>
        <div
          className="form-group less"
        >
          <div
            className="col-sm-3"
          >
            <label
              className="form__label control-label"
              htmlFor="newChannelHeader"
            >
              <FormattedMessage
                defaultMessage="Header"
                id="channel_modal.header"
              />
            </label>
            <label
              className="form__label light"
            >
              <FormattedMessage
                defaultMessage="(optional)"
                id="channel_modal.optional"
              />
            </label>
          </div>
          <div
            className="col-sm-9"
          >
            <textarea
              className="form-control no-resize"
              id="newChannelHeader"
              maxLength="1024"
              onChange={[Function]}
              placeholder="E.g.: \\"[Link Title](http://example.com)\\""
              rows="4"
              value="some header"
            />
            <p
              className="input__help"
            >
              <FormattedMessage
                defaultMessage="Set text that will appear in the header of the channel beside the channel name. For example, include frequently used links by typing [Link Title](http://example.com)."
                id="channel_modal.headerHelp"
              />
            </p>
          </div>
        </div>
      </ModalBody>
      <ModalFooter
        bsClass="modal-footer"
        componentClass="div"
      >
        <button
          className="btn btn-link"
          id="cancelNewChannel"
          onBlur={[Function]}
          onClick={[MockFunction]}
          type="button"
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="channel_modal.cancel"
          />
        </button>
        <button
          className="btn btn-primary"
          id="submitNewChannel"
          onClick={[Function]}
          type="submit"
        >
          <FormattedMessage
            defaultMessage="Create Channel"
            id="channel_modal.createNew"
          />
        </button>
      </ModalFooter>
    </form>
  </Modal>
</span>
`;
